--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "recharts": "^2.10.1"
   },
   "devDependencies": {
     "@types/node": "^20",
